--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -7,7 +7,7 @@
     "# Report: Analysis of Average Number of Bikes Used in Different Areas of Münster city\n",
     "\n",
     "\n",
-    "The purpose of this analysis is to examine the average number of bikes used in different areas and identify the need for new bicycle workshops. We utilized two datasets: one containing data on bicycle riders in various areas, and another containing information about existing bicycle workshops. By merging these datasets based on geographical coordinates, we were able to determine the average number of bikes used in each area.\n",
+    "The purpose of this analysis is to examine the average number of bikes used in different areas of Münster city and identify the need for new bicycle workshops. We utilized two datasets: one containing data on bicycle riders in various areas, and another containing information about existing bicycle workshops. By merging these datasets based on geographical coordinates, we were able to determine the average number of bikes used in each area.\n",
     "\n",
     "\n",
     "This project uses open data from 2 different sources.\n",
